# youtube-livechat-scraper

./: .gitignore  LICENSE  PinnedMessage.py  README.md  chatAction.py  chatMessage.py  constants.py  content.py  contentExtractor.py  continuationBuilder.py  continuationRequestor.py  continuation_builder.py  continuation_requestor.py  emoji.py  example.py  initialDocumentExtractor.py  initialDocumentRequestor.py  liveChatScraper.py  livechat_parser.py  livechat_requestor.py  main.py  membershipGiftedMessage.py  membershipmessage.py  message.py  nodeConstants.py  outputGenerator.py  player_state.py  pyproject.toml  request_tester.py  requestor.py  scraperInitializer.py  subsequentRequestor.py  subsequent_requestor.py  superchatMessage.py  testing.py
builders/: continuationBuilder.py  continuation_fetcher.py  player_state.py
constants/: nodeConstants.py  scraperConstants.py  scraper_constants.py
extractors/: contentExtractor.py  initialDocumentExtractor.py
generators/: outputGenerator.py  output_generator.py
messages/: PinnedMessage.py  chatMessage.py  chat_message.py  membershipGiftedMessage.py  membership_gifted_message.py  membership_message.py  membershipmessage.py  message.py  pinned_message.py  superchatMessage.py  superchat_message.py
output/: cleaned_1661307129.4060118_scrape.txt
parsers/: livechatParser.py  livechat_parser.py
requestors/: continuationRequestor.py  continuation_requestor.py  initialDocumentRequestor.py  initial_document_requestor.py  livechatRequestor.py  requestor.py  subsequentRequestor.py  subsequent_requestor.py
(+34 files in other folders)
