[build-system]
requires = ["hatchling", "requests", "bs4"]
build-backend = "hatchling.build"

[project]
name = "youtube-livechat-scraper-ohn0"
version = "1.0.1"
authors = [
    { name="ohn0", email="silverskinx@gmail.com"},
]
description="Livechat scraper for Youtube video streams"
readme="README.md"
requires-python=">=3.10"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/ohn0/youtube-livechat-scraper"