[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-livechat-scraper-ohn0"
version = "1.0.5"
authors = [
    { name="ohn0", email="silverskinx@gmail.com"},
]
description="Livechat scraper for Youtube video streams"
readme="README.md"
requires-python=">=3.10"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies= [
    "requests",
    "beautifulsoup4>=4.12.2"
]
[project.urls]
"Homepage" = "https://github.com/ohn0/youtube-livechat-scraper"
[tool.hatch.build.targets.wheel]
packages = ["livechat_scraper/"]